# Tych

./: .gitignore  LICENSE  Makefile  PACKAGING.md  README.md  TESTS.md  TEST_USAGE.md  build.py  main.py  pyproject.toml  run_tests.py
.github/workflows/: python-package.yml  tych-publish.yml
tests/: __init__.py  conftest.py  test_comparison.py  test_integration.py  test_pendulum.py  test_performance.py
tych/: __init__.py  cli.py  comparison.py  pendulum.py
